# STEPinfoGather

./: README.md
STEPinfoGather-CrossPlatform/: CMakeLists.txt
STEPinfoGather-CrossPlatform/src/: App.cpp  MainFrame.cpp  STEP__Converter.h
STEPinforExtrator/: STEPinforExtrator.sln
STEPinforExtrator/STEPinforExtrator/: 2024-7-21__2240.csv  App.cpp  MainFrame.cpp  MainFrame.h  OpenCascade.cpp  STEP__Converter.h  STEPinforExtrator.vcxproj  STEPinforExtrator.vcxproj.filters
